# user-service/main.go
@@ -99,13 +99,16 @@ func main() {
 	adminLoginEndpoint := endpoint.MakeAdminLoginEndpoint(usvc)
 	googleLoginEndpoint := endpoint.MakeGoogleLoginEndpoint(usvc)
 	kakoLoginEndpoint := endpoint.MakeKakaoLoginEndpoint(usvc)
+	appleLoginEndpoint := endpoint.MakeAppleLoginEndpoint(usvc)
 	autoLoginEndpoint := endpoint.MakeAutoLoginEndpoint(usvc)
 	setUserEndpoint := endpoint.MakeSetUserEndpoint(usvc)
 	getUserEndpoint := endpoint.MakeGetUserEndpoint(usvc)
+	getversionEndpoint := endpoint.GetVersionEndpoint(usvc)
 	getMainServicesEndpoint := endpoint.GetMainServicesEndpoint(usvc)
 	sendCodeEndpoint := endpoint.SendCodeEndpoint(usvc)
 	verifyEndpoint := endpoint.VerifyEndpoint(usvc)
 	removeEndpoint := endpoint.RemoveEndpoint(usvc)
+	linkEndpoint := endpoint.LinkEndpoint(usvc)
 
 	router := gin.Default()
 	router.Use(cors.Default())
@@ -114,13 +117,16 @@ func main() {
 	router.POST("/admin-login", transport.AdminLoginHandler(adminLoginEndpoint))
 	router.POST("/google-login", transport.GoogleLoginHandler(googleLoginEndpoint))
 	router.POST("/kakao-login", transport.KakaoLoginHandler(kakoLoginEndpoint))
+	router.POST("/apple-login", transport.AppleLoginHandler(appleLoginEndpoint))
 	router.POST("/auto-login", transport.AutoLoginHandler(autoLoginEndpoint))
 	router.POST("/set-user", transport.SetUserHandler(setUserEndpoint))
 	router.POST("/send-code/:number", rateLimiterMiddleware, transport.SendCodeHandler(sendCodeEndpoint))
 	router.POST("/verify-code", transport.VerifyHandler(verifyEndpoint))
 	router.POST("/remove-user", transport.RemoveHandler(removeEndpoint))
+	router.POST("/link-email", transport.LinkHandler(linkEndpoint))
 
 	router.GET("/get-user", transport.GetUserHandler(getUserEndpoint))
+	router.GET("/get-version", transport.GetVersionHandeler(getversionEndpoint))
 	router.GET("/get-services", transport.GetMainServicesHandeler(getMainServicesEndpoint))
 
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
